# mcp-libre

./: .gitignore  CHATGPT_BROWSER_GUIDE.md  COMPLETE_SOLUTION.md  LICENSE  LICENSE_OPTIONS.md  PREREQUISITES.md  QUICK_START.md  README.md  SUPER_ASSISTANT_SETUP.md  TROUBLESHOOTING.md  claude_config.json  claude_config.json.template  demo_editing.py  demo_live_viewing.py  generate-config.sh  libremcp.py  mcp-helper.sh  mcp.config.json.template  pyproject.toml  quick-test.sh  test_client.py  test_insert_fix.py
config/: claude_config.json.template  mcp.config.json.template
docs/: COMPLETE_SOLUTION.md  EXAMPLES.md  LIBREOFFICE_PLUGIN_DESIGN.md  Msfos2z7WcjeQmF.html  PLUGIN_MIGRATION_GUIDE.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY_STRUCTURE.md  SUPER_ASSISTANT_SETUP.md
examples/: __init__.py  demo_editing.py  demo_live_viewing.py
plugin/: Addons.xcu  IMPLEMENTATION_SUMMARY.md  ProtocolHandler.xcu  README.md  build.sh  description-en.txt  description.xml  install.sh  release-notes-en.txt  test_plugin.py
plugin/pythonpath/: ai_interface.py  mcp_server.py  registration.py  uno_bridge.py
scripts/: generate-config.sh  mcp-helper.sh
src/: __init__.py  libremcp.py  main.py
tests/: __init__.py  test_client.py  test_insert_fix.py
