[project]
name = "mcp-libre"
version = "0.1.0"
description = "LibreOffice Model Context Protocol Server - Provides tools and resources for interacting with LibreOffice documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.10.1",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-libre = "libremcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libremcp.py", "main.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
